[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pytools"
version = "0.0.1"
authors = [
    {name = "Alexander Rodis", email = "alexanderrhodis@gmail.com"},
]
maintainers = [
  {name = "Alexander Rodis", email = "alexanderrhodis@gmail.com"}
]
description = "A compilation of tools and utility code for data analysis and machine learning to facilitate reusability"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
      "data", "analysis", "science", "tools", 
      "bayesian", "inference", "statistics", 
      "machine", "learning"
]
lincense = {text="Apache-2.0"}
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS independent",
    "DEvelopment Status :: 4 - Beta",
]

dependencies = [
	"pymc",
	"plotly",
	"matplotlib",
	"scikit-learn",
	"umap-learn",
	"seaborn",
	"arviz",
    "bayesian-models",
]

[project.optional-dependencies]

CPU = [
    'jax[cpu]',
    'numpyro'
]

GPU = [
    '"jax[cuda12_pip]" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html',
    'numpyro',
]


[project.urls]
Homepage = "https://github.com/AlexRodis/pytools"
"Bug Tracker" = "https://github.com/AlexRodis/pytools/issues"
Documentation = "https://readthedocs.org/projects/pytools"
Repository = "https://github.com/AlexRodis/pytools"
Changelog = "https://github.com/AlexRodis/pytools/blob/master/CHANGELOG.md"


[tool.setuptools.packages.find]
where = ['src.pytools']
include = ['pytools*']
exclude = ['tests.*']
namespaces = false
