[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pytools"
version = "0.0.1"
authors = [
    {name = "Alexander Rodis", email = "alexanderrhodis@gmail.com"},
]
maintainers = [
  {name = "Alexander Rodis", email = "alexanderrhodis@gmail.com"}
]
description = "A compilation of tools and utility code for data analysis and machine learning to facilitate reusability"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
      "data", "analysis", "science", "tools", 
      "bayesian", "inference", "statistics", 
      "machine", "learning"
]
license = {text="Apache-2.0"}
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS independent",
    "DEvelopment Status :: 4 - Beta",
]

dependencies = [
	"pymc>=5.6",
	"plotly>=5.16",
	"matplotlib>=3.7",
	"scikit-learn>=1.3.0",
	"umap-learn>=0.5",
	"seaborn>=0.12",
    "screeninfo>=0.8",
    "bayesian-models",
]

[project.optional-dependencies]

DEV = [
    "GPy",
    "sphinx",
    "sphinx-rtd-theme",
    "pytest",
    "jax[cuda12_pip]",
    "numpyro",
    
]

CPU = [
    'jax[cpu]',
    'numpyro'
]

GPU11 = [
    'jax[cuda11_pip]',
    'numpyro',
]

GPU12 = [
    'jax[cuda12_pip]',
    'numpyro',
]

TPU = [
    'jax[tpu]',
    'numpyro',
]

[project.urls]
Homepage = "https://github.com/AlexRodis/pytools"
"Bug Tracker" = "https://github.com/AlexRodis/pytools/issues"
Documentation = "https://readthedocs.org/projects/pytools"
Repository = "https://github.com/AlexRodis/pytools"
Changelog = "https://github.com/AlexRodis/pytools/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ['src']
include = ['pytools']
exclude = ['tests.*']
namespaces = false
